<resources>
    <string name="app_name">Archedny_app_friend</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="sing_up">Sing Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="contained_button">Contained button</string>
    <string name="textview">TextView</string>
    <string name="log_in">Log In</string>
    <string name="what_is_your_phone_number">What is your Phone Number</string>
    <string name="we_will_send_you_a_verfication_code">We will send you a verfication code</string>
    <string name="countinue">Continue</string>
    <string name="phone_n_verification">Phone \n Verification</string>
    <string name="if_you_didn_t_receive_a_code">if you didn\'t receive a code!</string>
    <string name="resend">Resend</string>
    <string name="please_type_the_verification_code">Please type the verification Code</string>
    <string name="sent_to">sent to</string>
    <string name="verifiy">Verifiy</string>
    <string name="can_send_code_after">Can send code after</string>
    <string name="request_loading">Request Loading</string>
    <string name="archedny">Archedny</string>
    <string name="my_friends">My Friends</string>
    <string name="skip">Skip</string>
    <string name="phone">Phone Number</string>
    <string name="user_name">User Name</string>
    <string name="save_info">Save Info</string>
    <string name="please_accepte_permission_to_have_utility_of_our_application">Please accepte Permission to have Utility of our application</string>
    <string name="search">Search</string>
    <string name="chat">Chats</string>
    <string name="search_by_phone_number">Search by Phone Number</string>
    <string name="search_by_phone">Search by Phone</string>
    <string name="enter_phone_to_search">Enter Phone to Search</string>
    <string name="sucess_toast_meassge">Success Operation</string>
    <string name="error">Error</string>
    <string name="are_you_went_to_send_request_to_asking_your_frind_to_traking_his_location">Are you went to send request to asking your frind to traking his location</string>
    <string name="yes_send_request">Yes send Request</string>
    <string name="no_cancle">No, Cancle</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="log_out">Log out</string>
    <string name="setting_ui">Setting Ui</string>
    <string name="my_setting">My Setting</string>
    <string name="auto_extend_map">Auto Extend Map</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="arabic_langushe">Arabic Langushe</string>
    <string name="chats">Chats</string>
</resources>